Fix minor issue with footer social spacing

--- a/development/terminalfour/src/sass/msu-partials/_footer.scss
+++ b/development/terminalfour/src/sass/msu-partials/_footer.scss
@@ -168,7 +168,8 @@ footer {
     margin-top: torem(50);
     li {
         display: inline-block;
-        margin-right: torem(30);
+        margin-left:  torem(15);
+        margin-right: torem(15);
     }
     .fa {
         font-size: torem(30);
